# passablewords-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: passablewords.rs
src/: lib.rs
