[package]
name = "passablewords"
description = "A library to check the strength of a password in a sane way"
repository = "https://github.com/mike-engel/passablewords"
documentation = "https://docs.rs/passablewords"
readme = "README.md"
version = "1.0.1"
authors = ["Mike Engel <mike@mike-engel.com>"]
license = "MIT"
keywords = ["password", "passphrase", "security", "entropy", "authentication"]
categories = ["authentication"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
lazy_static = "0.2"
zxcvbn = "0.6"
